git.commit -message "NICE"

--- a/GIT/index.html
+++ b/GIT/index.html
@@ -46,6 +46,6 @@
             Третий
         </li>
     </ol>
-    <img src="GIT/Деньги.jpg">
+    <img src="C:\Users\serg\Desktop\работа Егора Коробкина\хранилище файлов с питона\GIT\money.jpg" alt="Много денег, которые меня радуют." width="500" height="500">
 </body>
 </html>
