git.commit -message "NICE"

--- a/GIT/index.html
+++ b/GIT/index.html
@@ -47,5 +47,11 @@
         </li>
     </ol>
     <img src="C:\Users\serg\Desktop\работа Егора Коробкина\хранилище файлов с питона\GIT\money.jpg" alt="Много денег, которые меня радуют." width="500" height="500">
+    <p class="paragraph-4">В 2026 году на рынке устройств виртуальной реальности появляется «Augma» 
+        - прямой конкурент «NerveGear» и «Amusphere». Носимое устройство следующего 
+        поколения «Augma», в отличие от своих предшественников, не имеет функции полного
+         погружения. Вместо этого он использует дополненную реальность (AR), которая 
+         является более безопасной и удобной для пользователя, что и приносит 
+         ей небывалый успех среди других игровых устройств. </p>
 </body>
 </html>
