git commit -m(ne nado)

--- a/GIT/index.html
+++ b/GIT/index.html
@@ -46,7 +46,7 @@
             Третий
         </li>
     </ol>
-    <img src="C:\Users\serg\Desktop\работа Егора Коробкина\хранилище файлов с питона\GIT\money.jpg" alt="Много денег, которые меня радуют." width="500" height="500">
+    <img src="C:\Users\egork\Desktop\работа Егора Коробкина\хранилище файлов с питона\GIT\money.jpg" alt="Много денег, которые меня радуют." width="500" height="500">
     <p class="paragraph-4">В 2026 году на рынке устройств виртуальной реальности появляется «Augma» 
         - прямой конкурент «NerveGear» и «Amusphere». Носимое устройство следующего 
         поколения «Augma», в отличие от своих предшественников, не имеет функции полного
